--- a/Labb_3_Mvc/Views/Shared/_Layout.cshtml
+++ b/Labb_3_Mvc/Views/Shared/_Layout.cshtml
@@ -26,22 +26,22 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Labb_3_Mvc</a>
+                <a asp-area="" asp-controller="Cinema" asp-action="Index" class="navbar-brand">Home</a>
             </div>
-            <div class="navbar-collapse collapse">
+            <!--<div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
-            </div>
+            </div>-->
         </div>
     </nav>
     <div class="container body-content">
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2018 - Labb_3_Mvc</p>
+            <p>&copy; 2018 - Labb 3 Mvc Iago de Souza</p>
         </footer>
     </div>
 
