--- a/Labb_3_Mvc/Views/Cinema/Index.cshtml
+++ b/Labb_3_Mvc/Views/Cinema/Index.cshtml
@@ -26,7 +26,7 @@
                     <img src="~/images/imgnotavlb.png">
                 </td>
                 <td>
-                    <a asp-action="Movie" asp-route-id="@Html.Encode(item.Movie.Title)">@Html.Encode(item.Movie.Title)</a>
+                    <a asp-action="Movie" asp-route-id="@Html.Encode(item.Movie.Id)">@Html.Encode(item.Movie.Title)</a>
                 </td>
                 <td>
                     @Html.Encode(item.Movie.Genre)
