--- a/Labb_3_Mvc/Views/Cinema/Movie.cshtml
+++ b/Labb_3_Mvc/Views/Cinema/Movie.cshtml
@@ -1,7 +1,22 @@
-﻿
+﻿@model IEnumerable<Labb_3_Mvc.Cinema.Models.Conjunction>
 @{
     ViewData["Title"] = "Movie";
 }
 
 <h2>Movie</h2>
+
+<table class="table">
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td><img src="~/images/imgnotavlb.png" /> </td>
+                <th>Movie: @item.Movie.Title</th>
+                <td>Genre: @item.Movie.Genre</td>
+                <td>Recommended Age: @item.Movie.AgeRange</td>
+                <td><a asp-action="BookMovie" asp-route-id="@Html.Encode(item.Movie.Id)" class="btn btn-default">Book Movie</a></td>
+            </tr>
+        }
+    </tbody>
+</table>
 
