--- a/Labb_3_Mvc/wwwroot/css/site.css
+++ b/Labb_3_Mvc/wwwroot/css/site.css
@@ -16,6 +16,10 @@
     line-height: 1.4;
 }
 
+.table img{
+    width: 200px;
+}
+
 /* Make .svg files in the carousel display properly in older browsers */
 .carousel-inner .item img[src$=".svg"] {
     width: 100%;
