--- a/Labb_3_Mvc/Views/Cinema/Movie.cshtml
+++ b/Labb_3_Mvc/Views/Cinema/Movie.cshtml
@@ -14,7 +14,7 @@
     {
         imgurl = $"{item.Movie.Imgurl}";
     }
-    <div class="row">
+    <div class="row moviecontainer">
         <div class="mycontainer">
             <div class="movieposter">
                 <img src="@imgurl" />
