--- a/Labb_3_Mvc/Views/Cinema/BookMovie.cshtml
+++ b/Labb_3_Mvc/Views/Cinema/BookMovie.cshtml
@@ -47,6 +47,8 @@
 
             @if (maxnrofseats > 0)
             {
+                <form method="post" asp-action="Thanks" asp-route-id="@Html.Encode(item.Id)">
+
                 <div class="seats">
                     <p>Choose the number of seats (Max @maxnrofseats).</p>
                     <input type="number" min="1" max="@maxnrofseats" step="1" value="1" id="seatsInput" name="seatsInput" />
@@ -54,8 +56,9 @@
 
                 <div class="bookingbutton">
                     <hr />
-                    <a asp-action="Thanks" asp-route-id="@Html.Encode(item.Movie.Id)" class="btn btn-default">Book</a>
+                    <button type="submit" class="btn btn-default">Book</button>
                 </div>
+                </form>
             }
             else
             {
