--- a/Labb_3_Mvc/Views/Cinema/Thanks.cshtml
+++ b/Labb_3_Mvc/Views/Cinema/Thanks.cshtml
@@ -1,10 +1,16 @@
-﻿@model IEnumerable<Labb_3_Mvc.Cinema.Models.Conjunction>
+﻿@model IEnumerable<Labb_3_Mvc.Cinema.Models.BookingTicket>
 
 @{
     ViewData["Title"] = "Thanks";
 }
 
-<h2>Ticket</h2>
+<h2>Thank you</h2>
+
+@foreach (var i in Model)
+{
+    <h3>Your movie: @i.Movie.Title</h3>
+    <h3>Room: @i.Room.RoomName</h3>
+}
 
 todo:<br />
  https://phppot.com/jquery/enable-disable-submit-button-based-on-validation/
