--- a/Labb_3_Mvc/wwwroot/css/site.css
+++ b/Labb_3_Mvc/wwwroot/css/site.css
@@ -44,6 +44,7 @@ tr:nth-child(even) {
 
     .movieposter img {
         width: 300px;
+        box-shadow: 1px 1px 20px dimgrey;
     }
 
 .mmovietext {
