--- a/Labb_3_Mvc/Views/Cinema/Thanks.cshtml
+++ b/Labb_3_Mvc/Views/Cinema/Thanks.cshtml
@@ -10,15 +10,9 @@
 {
     <h3>Your movie: @i.Movie.Title</h3>
     <h3>Room: @i.Room.RoomName</h3>
+    <h3>Nr Of Seats Left: @i.Movie.SeatsNr</h3>
+    <h3>Date booked: @i.BookingDate</h3>
+    break;
 }
-
-todo:<br />
- https://phppot.com/jquery/enable-disable-submit-button-based-on-validation/
-<br />
-https://stackoverflow.com/questions/28345384/pass-input-values-from-viewaspx-to-controller
-<br />
-https://docs.microsoft.com/en-us/aspnet/core/tutorials/first-mvc-app/controller-methods-views?view=aspnetcore-2.1#additional-resources
-<br />
-https://docs.microsoft.com/en-us/aspnet/core/tutorials/first-mvc-app/controller-methods-views?view=aspnetcore-2.1
-<br />
-https://jonhilton.net/2017/08/17/how-to-get-data-from-an-html-form-to-your-asp.net-mvc-core-controller/
+<hr />
+<a asp-action="Index" class="btn btn-default">Back to Home</a>
