commented out a line

--- a/Labb_3_Mvc/Views/Cinema/Thanks.cshtml
+++ b/Labb_3_Mvc/Views/Cinema/Thanks.cshtml
@@ -10,7 +10,7 @@
 {
     <h3>Your movie: @i.Movie.Title</h3>
     <h3>Room: @i.Room.RoomName</h3>
-    <h3>Nr Of Seats Left: @i.Movie.SeatsNr</h3>
+    <!--<h3>Nr Of Seats Left: @i.Movie.SeatsNr</h3>-->
     <h3>Date booked: @i.BookingDate</h3>
     break;
 }
